# spam_finder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  credentials.json.example  fly.toml  link_verifying_agent.py  main.py  pyproject.toml  query_parse_agent.py  requirements.txt  search_agent.py
agents/: link_verifying_agent.py  query_parse_agent.py
app/: main.py
db/: chroma.sqlite3
integrations/: gmail_provider.py
score_evaluator/: score_evaluator.py  scoring_system.yml
utils/: html_parser.py
