[tool.poetry]
name = "spam_finder"
version = "0.1.0"
description = ""
authors = ["Rubab Uddin <uddin.rubab@gmail.com>", "Nathan Sass <nsass711@gmail.com>"]
packages = [{include = "main.py"}] 
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
langchain = ">=0.1.10,<0.2.0"
crewai = { version = "^0.30.11", python = ">=3.11,<=3.13" }
crewai-tools = { version = "^0.2.6", optional = true }
chromadb = ">=0.4.22,<0.5.0"
langchain-openai = ">=0.0.5,<0.0.6"
youtube-transcript-api = "^0.6.2"
google = "^3.0.0"
google-api-python-client = "^2.130.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
nltk = "^3.8.1"
fastapi = "0.110.3"
uvicorn = "0.30.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"